sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:13: error: value sw is not a member of Unit
possible cause: maybe a semicolon is missing before `value sw'?
 			}sw=true
                         ^